--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
 main: tootymc.Tooty
 name: TootyMC
-version: 0.1.0-b2
+version: 0.1.0-b3
 author: ooliver1 - Oliver WIlkes
 api-version: 1.17
+database: true
+api: "go away vscode this isn't required"
