--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: xyz.minecat.Minecat
 name: minecat
-version: 0.7.0-b
+version: 1.0.0-rc
 author: ooliver1 - Oliver WIlkes
 api-version: 1.17
 database: false
