--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 main: xyz.minecat.Minecat
 name: minecat
-version: 1.2.0-rc
+version: 1.3.0-rc
 author: ooliver1 - Oliver WIlkes
 database: false
 api: "go away vscode this isn't required"
+api-version: 1.13
