--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-target/
-.classpath
-bin/
-license-header.txt
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
