--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,3 +16,4 @@ jobs:
           package-name: release-please-action
           pre-release: ${{ github.ref_name != 'master' }}
           extra-files: plugin/build.gradle.kts
+          default-branch: ${{ github.ref_name }}
