--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           release-type: node
           package-name: release-please-action
-          pre-release: ${{ github.ref_name != 'master' }}
+          draft: ${{ github.ref_name != 'master' }}
           extra-files: plugin/build.gradle.kts
           default-branch: ${{ github.ref_name }}
