--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Parse semver string
         if: steps.release.outputs.release_created
         id: semver_parser
-        uses: booxmedialtd/ws-action-parse-semver@4f8784f912407f85ba53b686fe2cf85d4ee11a20
+        uses: booxmedialtd/ws-action-parse-semver@v1
         with:
           input_string: ${{ steps.release.outputs.tag_name }}
       - name: Mark as pre-release
