ci(release): use a locked version and if semver is 0 it is a prerelease

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       # add back master when merged
-#     - master
+      #     - master
       - dev
 
 name: release-please
@@ -25,8 +25,8 @@ jobs:
         with:
           input_string: ${{ steps.release.outputs.tag_name }}
       - name: Mark as pre-release
-        if: steps.semver_parser.outputs.prerelease != ''
-        uses: tubone24/update_release@6a6e4bf2bea820d75d8a1c014fa5b2be60227cbf
+        if: ${{ (steps.semver_parser.outputs.prerelease != '') || (steps.semver_parser.outputs.major == '0') }}
+        uses: tubone24/update_release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG_NAME: ${{ steps.release.outputs.tag_name }}
