--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           input_string: ${{ steps.release.outputs.tag_name }}
       - name: Mark as pre-release
-        if: ${{ (steps.semver_parser.outputs.prerelease != '') || (steps.semver_parser.outputs.major == '0') }}
+        if: ${{ ((steps.semver_parser.outputs.prerelease != '') || (steps.semver_parser.outputs.major == '0')) && steps.release.outputs.release_created }}
         uses: tubone24/update_release@v1.3.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
