--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,6 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         java: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
         gradle: [2, 3, 4, 5, 6, 7]
-        distribution: [temurin, zulu, liberica, microsoft, corretto]
 
     runs-on: ${{ matrix.os }}
 
@@ -17,7 +16,7 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v3
         with:
-          distribution: ${{ matrix.distribution }}
+          distribution: temurin
           java-version: ${{ matrix.java }}
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
