--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,19 @@
 on: [push, pull_request]
 
+name: Build
+
 jobs:
   build:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        java: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
+        java: [8, 11, 16, 17]
         gradle: [2, 3, 4, 5, 6, 7]
+        distribution: [temurin, zulu, liberica]
 
     runs-on: ${{ matrix.os }}
+
+    name: Java${{ matrix.java }}-${{ matrix.distribution }} Gradle${{ matrix.gradle }} ${{ matrix.os }}
 
     steps:
       - name: Checkout repository
