--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         java: [8, 11, 16, 17]
-        gradle: [4, 5, 6, 7]
+        gradle: [5, 6, 7]
         distribution: [temurin, zulu, liberica, microsoft, corretto]
 
     runs-on: ${{ matrix.os }}
