--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         java: [8, 11, 16, 17]
-        gradle: [6, 7]
         distribution: [temurin, zulu, liberica, microsoft, corretto]
 
     runs-on: ${{ matrix.os }}
@@ -23,9 +22,6 @@ jobs:
         with:
           distribution: temurin
           java-version: ${{ matrix.java }}
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: ${{ matrix.gradle }}
+          cache: gradle
       - name: Execute Gradle build
         run: ./gradlew build
