--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,11 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04, macos-10.15, macos-11, macos-12, windows-2019, windows-2022]
-        java: [8, 11, 16, 17]
-        distribution: [temurin, zulu, liberica, microsoft, corretto]
+        java: [8, 17]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
-    name: Java ${{ matrix.java }}-${{ matrix.distribution }} ${{ matrix.os }}
+    name: Java ${{ matrix.java }}
 
     steps:
       - name: Checkout repository
